Various PMD, checkstyle and FindBugs fixes